# outlier-robust-radar-odometry

./: CMakeLists.txt  README.md  package.xml
config/: orora_params.yaml
include/: ORORA.hpp  SE2posemanager.hpp  association.hpp  conversion.hpp  features.hpp  radar_loader.hpp  radar_utils.hpp  visualization.hpp
include/solver/: graph.h  nonminimal_solver.hpp
launch/: run_orora.launch
rviz/: orora_viz.rviz
scripts/: calc_mean_errors.py  calc_mean_time.py  evaluate_odometry.py  plot_scan_matching_accuracy.py
src/: association.cpp  features.cpp  graph.cc  localization.cpp  mulran_generate_gt.cpp  odometry.cpp  radar_utils.cpp  visualization.cpp
